# libre-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  RELEASES.md  app.py  cliff.toml  install.sh  libre-mcp.spec  pyproject.toml
.claude/skills/docs/: SKILL.md
.claude/skills/test-libre-mcp/: SKILL.md
.github/workflows/: pages.yml  release-pr.yml  release-tag.yml  release.yml  test.yml
dev/: client.py
src/: __init__.py  __main__.py  config.py  log.py  server.py  update.py
src/office/: __init__.py  discovery.py  session.py  soffice.py  uno_worker.py  worker.py
src/tools/: __init__.py  _defaults.py  calc.py  document.py  impress.py  writer.py
tests/: test_discovery.py  test_integration.py  test_mcp_stdio.py
wiki/: CNAME  Makefile  _config.yml  index.md  llms.txt
wiki/_data/: nav.yml
wiki/_docs/: architecture.md  development.md  formats.md  install.md  live-editing.md  quickstart.md  tools.md
wiki/_includes/: footer.html  head.html  header.html  sidebar.html
wiki/_layouts/: default.html  doc.html  home.html
wiki/assets/css/: main.css
